Dodalem mozliwosc edycji gry po jej zapisaniu (update)

--- a/AgricolaCalculator/Score.xaml
+++ b/AgricolaCalculator/Score.xaml
@@ -10,7 +10,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
-    mc:Ignorable="d" shell:SystemTray.IsVisible="True" d:DesignHeight="768" d:DesignWidth="480">
+    mc:Ignorable="d" shell:SystemTray.IsVisible="True" d:DesignHeight="768" d:DesignWidth="480" IsEnabled="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -27,8 +27,8 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1">
             <TextBox Height="72" HorizontalAlignment="Center" Margin="0,6,0,0" Name="playerNameTxt" Text="TextBox" VerticalAlignment="Top" Width="204" TextChanged="playerNameTxt_TextChanged" />
-            <ScrollViewer HorizontalAlignment="Center" Margin="0,84,0,0" Name="scrollViewer1" VerticalAlignment="Stretch" Width="480" VerticalContentAlignment="Stretch">
-                <Grid>
+            <ScrollViewer HorizontalAlignment="Center" Margin="0,84,0,0" Name="scrollViewer1" VerticalAlignment="Stretch" Width="480" VerticalContentAlignment="Stretch" IsEnabled="True">
+                <Grid x:Name="ScrollPanel">
                     <TextBlock Height="30" HorizontalAlignment="Left" Margin="195,10,0,0" Name="fieldsTxt" Text="Fields" VerticalAlignment="Top" TextAlignment="Center" Width="65" />
                     <ToggleButton Height="72" HorizontalAlignment="Left" Margin="38,45,0,0" Name="fieldsBtn1" VerticalAlignment="Top" Width="72" FontSize="20" Content="0-1" Checked="fieldsBtn_Checked" Padding="5,8" />
                     <ToggleButton Height="72" HorizontalAlignment="Left" Margin="116,45,0,0" Name="fieldsBtn2" VerticalAlignment="Top" Width="72" FontSize="20" Content="2" Checked="fieldsBtn_Checked" Padding="5,8" />
