--- a/AgricolaCalculator/MainPage.xaml
+++ b/AgricolaCalculator/MainPage.xaml
@@ -26,10 +26,14 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0" Background="{x:Null}">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <Button Content="Dodaj rozgrywkę" Height="72" HorizontalAlignment="Center" Margin="0,250,0,0" Name="addGame" VerticalAlignment="Top" Width="257" Click="addGame_Click" UseLayoutRounding="True" />
             <Button Content="Historia rozgrywek" Height="72" HorizontalAlignment="Center" Margin="0,382,0,0" Name="gameHistory" VerticalAlignment="Top" Width="268" Click="gameHistory_Click" />
             <Button Content="Zaloguj" Height="61" HorizontalAlignment="Center" Margin="0,613,0,0" Name="login" VerticalAlignment="Top" Width="106" Click="login_Click" FontSize="14" />
+            <Image Height="160" HorizontalAlignment="Left" Margin="158,70,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="160" Source="/Agricola%20Calculator;component/logo_agri.png" />
+            <Grid.Background>
+                <ImageBrush />
+            </Grid.Background>
         </Grid>
     </Grid>
  </phone:PhoneApplicationPage>
